# equirec2perspec

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  OVERVIEW.md  PROFILING_DEMOS.md  README.md  TODO.md  demo_custom_profiling.py  demo_performance_analysis.py  demo_profiling.py  pyproject.toml  setup.py
.github/: renovate.json
.github/workflows/: ci.yml  publish.yml  renovate.yml  update-deps.yml
equirec2perspec/: Equirec2Perspec.py  __init__.py
scripts/: build.sh  lint.sh  test.sh  update-deps.sh
src/equirec2perspec/: Equirec2Perspec.py  __init__.py  cli.py  perspective_helpers.py  profiling.py
tests/: __init__.py  conftest.py  test_cli.py  test_coordinate_transforms.py  test_equirectangular.py  test_integration.py  test_load_image.py  test_perspective_helpers.py  test_profiling.py
