[tool.poetry]
name = "equirec2perspec"
version = "0.1.0"
description = ""
authors = ["Stefan Küpper <stefan.kuepper@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyturbojpeg = {version = "^1.7.3", optional = true}
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
turbojpeg =["pyturbojpeg"]
