[project]
name = "equirec2perspec"
version = "0.1.0"
description = "A library to project equirectangular panorama into perspective images"
authors = [
    {name = "Stefan Küpper", email = "stefan.kuepper@posteo.de"}
]
maintainers = [
    {name = "Stefan Küpper", email = "stefan.kuepper@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
]

[project.optional-dependencies]
turbojpeg = ["pyturbojpeg>=1.7.3"]

[project.urls]
Homepage = "https://github.com/stefan-kuepper/equirec2perspec"
Repository = "https://github.com/stefan-kuepper/equirec2perspec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equirec2perspec"]
